RESOLVED FIXED134992
REGRESSION (iOS WebKit2): Cannot scroll while dragging a selection
https://bugs.webkit.org/show_bug.cgi?id=134992
Summary REGRESSION (iOS WebKit2): Cannot scroll while dragging a selection
Enrica Casucci
Reported 2014-07-16 15:59:16 PDT
Attachments
Patch (9.69 KB, patch)
2014-07-16 16:05 PDT, Enrica Casucci
benjamin: review+
Enrica Casucci
Comment 1 2014-07-16 16:05:31 PDT
Benjamin Poulain
Comment 2 2014-07-16 16:39:44 PDT
Comment on attachment 235032 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=235032&action=review rs=me > Source/WebKit2/ChangeLog:14 > + This patch exposes the scroller and the visible content rect so that > + UIKit can implement autoscroll when dragging the selections. > + It also changes that way we do hit testing to allow hit test outside > + the clipping region and fixes the way we compute the selection rectangle > + for the block selection, ensuring that we consider also non text elements > + like images. I think this would have been better as 3 patches. > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:352 > +- (UIScrollView *)scroller Shouldn't we just override UIKit's _scroller method? > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:357 > +- (CGRect)visibleRect I would prefer keeping the name unobscuredRect. Having [WKContentView visibleRect] returning the unobscuredRect seems very confusing. > Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:718 > + for (unsigned i = 0; i < size; i++) { WebKit style: i++ -> ++i
Enrica Casucci
Comment 3 2014-07-16 17:01:03 PDT
Committed revision 171159.
Note You need to log in before you can comment on or make changes to this bug.